# winremap

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.ja.md  README.md  SECURITY.md  THIRD-PARTY-NOTICES.md  build.rs
.cargo/: config.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml  pages.yml  release.yml
docs/: 01_project-brief.md  02_development-plan.md  02_rust-guidelines.md  03_release-operations.md  03_rust-guidelines.md  04_config-spec.md  04_git-branching.md  05_acceptance-checklist.md  06_release-operations.md  07_icon-design-brief.md  08_ime-indicator-design.md  09_ime-indicator-plan.md  10_v0.2-development-plan.md  README.md
docs/decisions/: 0001-use-windows-rs.md  0002-rust-edition-2024.md  0004-keymap-matching-priority.md  0005-modifier-lift-restore.md  0006-injection-markers.md  0011-application-exclude-list.md  0013-two-stroke-sequences.md  0014-ui-localization.md  0015-menu-mask-key.md  0016-debug-key-logging.md  0018-opt-in-macro-pacing.md  0019-macro-delay-in-config.md  0022-ime-indicator-getwindowrect.md  0023-ime-indicator-query-target.md  0024-ime-indicator-app-name.md  0025-display-name-winremap.md  0026-ime-indicator-reshow-after-shell.md  0027-windows-installer-inno-setup.md  README.md
docs/notes/: 20260719_expand-region-study.md
docs/v0.1/: 01_development-plan.md  02_config-spec.md  02_development-plan.md  04_config-spec.md  05_acceptance-checklist.md  05_ime-indicator-design.md  06_ime-indicator-plan.md
docs/v0.1/decisions/: 0001-use-windows-rs.md  0003-config-reload-arc-swap.md  0004-keymap-matching-priority.md  0007-tray-crate-tray-icon.md  0008-reload-via-tray-menu.md  0009-bootstrap-unsafe-placement.md  0010-icon-embedding.md  0012-macro-outputs.md  0014-ui-localization.md  0017-macro-minimal-mod-transitions.md  (+4 more)
docs/v0.2/: 01_development-plan.md  02_gui-framework-study.md  03_acceptance-checklist.md  04_config-gui-design.md  10_v0.2-development-plan.md
docs/v0.3/: 01_development-plan.md  02_macro-record-design.md  03_acceptance-checklist.md
docs/v0.4/: 01_development-plan.md  02_config-editing-design.md  04_config-editing-screens.md
examples/: egui_ime_probe.rs  emacs.toml  ime_probe.rs  minimal.toml  suganuma.toml
installer/: winremap.iss
packaging/: README.md
site/: config.html  ime.html  index.html  install.html  macro.html  style.css
site/ja/: config.html  ime.html  index.html  install.html  macro.html
src/: clock.rs  config.rs  hook.rs  i18n.rs  ime_indicator_settings.rs  keymap.rs  lib.rs  log_window.rs  main.rs  notify.rs  recorder.rs  sender.rs  theme.rs  tray.rs  window.rs
src/config/: comments.rs  compile.rs  mod.rs  raw.rs  tests.rs
src/gui/: config_window.rs  icons.rs  log.rs  mod.rs  win32.rs
src/ime_indicator/: detect.rs  mod.rs  overlay.rs
src/keymap/: mod.rs  parse.rs  table.rs  tests.rs
src/macro_record/: banner.rs  mod.rs
tests/: keymap_test.rs
(+25 files in other folders)
