[package]
name = "winremap"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "A per-application key remapper for Windows, written in Rust"
repository = "https://github.com/DaikiSuganuma/winremap"
keywords = ["keyboard", "remap", "windows", "hotkey"]
categories = ["os::windows-apis"]

[dependencies]
anyhow = "1"
arc-swap = "1.9.2"
serde = { version = "1", features = ["derive"] }
thiserror = "2"
toml = "0.9"
windows = { version = "0.62.2", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_UI_Input_KeyboardAndMouse", "Win32_UI_Accessibility", "Win32_System_Threading"] }
