[package]
name = "winremap"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "A per-application key remapper for Windows, written in Rust"
repository = "https://github.com/DaikiSuganuma/winremap"
keywords = ["keyboard", "remap", "windows", "hotkey"]
categories = ["os::windows-apis"]

# Distribution binary: thin LTO and symbol stripping keep the single-exe
# download small without the compile-time cost of full LTO.
[profile.release]
lto = "thin"
strip = true

[dependencies]
anyhow = "1"
arc-swap = "1.9.2"
serde = { version = "1", features = ["derive"] }
sys-locale = "0.3.2"
thiserror = "2"
toml = "0.9"
tray-icon = "0.24.1"
windows = { version = "0.62.2", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_UI_Input_KeyboardAndMouse", "Win32_UI_Input_Ime", "Win32_UI_Accessibility", "Win32_System_Threading", "Win32_System_LibraryLoader", "Win32_Security", "Win32_Graphics_Gdi", "Win32_Graphics_Dwm"] }

[build-dependencies]
winresource = "0.1.31"
